# auction-estimate

./: .gitignore  README.md  config.yaml  predict.py  pyproject.toml  requirements.txt  scrape_all.py
features/: comps.py  macro.py  parse.py  taxonomy.py
models/: adjust.py  dataset.py  evaluate.py  panel.py  train.py
scrapers/: bat.py  carsandbids.py  common.py  listing.py  snapshot.py
