[project]
name = "auction-estimate"
version = "0.1.0"
description = "Predicts enthusiast-car auction prices (MINI Cooper, VW Golf, BMW wagons) on Bring a Trailer and Cars & Bids."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.44",
    "pandas>=2.2",
    "numpy>=1.26",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "pyarrow>=15.0",
    "joblib>=1.3",
]

[tool.uv]
package = false
